--- a/pubnub-chat/app/index.html
+++ b/pubnub-chat/app/index.html
@@ -16,7 +16,7 @@
         <div class="bar" style="width: 100%;">
         </div>
     </div>
-    <div class="well">
+    <div id="chat">
         <b>Status: {{realtimeStatus}} </b>
         <form class="form-horizontal">
             <label>
