--- a/pubnub-chat/app/index.html
+++ b/pubnub-chat/app/index.html
@@ -10,30 +10,22 @@
   <script src="http://cdn.pubnub.com/pubnub-3.1.min.js"></script>
 </head>
 <body>
-  
+
 <div ng-controller="MyCtrl">
-    <div class="progress progress-striped active" id="progress_bar">
+    <div class="progress progress-danger progress-striped" id="progress_bar">
         <div class="bar" style="width: 100%;">
         </div>
     </div>
+	
     <div id="chat">
+    	<img ng-src="img/pubnub-large.png" alt="PubNub" id="logo"/><br/>
         <b>Status: {{realtimeStatus}} </b>
         <form class="form-horizontal">
-            <label>
-                Name:
-            </label>
-            <input placeholder="Your Name" type="text" name="username" ng-model="message.username"/>
-            <br/>
-            <label>
-                Email:
-            </label>
-            <input placeholder="Your Email" type="text" name="email" ng-model="message.email"/>
-            <br/>
-            <label>
-                Message:
-            </label>
+          
+            <input placeholder="What is your name?" type="text" name="username" ng-model="message.username"/>
+			<div class="clearfix"></div>
             <input placeholder="What's on your mind?" type="text" name="text" ng-model="message.text"/>
-            <button type="submit" ng-click="publish()" class="btn btn-primary">
+            <button type="submit" ng-click="publish()" class="btn btn-danger">
                 Send
             </button>
         </form>
@@ -41,7 +33,7 @@
         <div id="messages" class="table-striped">
             <div class="message" ng-repeat="message in messages" cool-fade>
                 <div class="avatar-frame">
-                    <img ng-src="http://www.gravatar.com/avatar/{{message.email}}?s=60&r=R&d=img/img_profile_placeholder.png" class="avatar avatar-60 photo" height="60" width="60"/>
+                    <img ng-src="img/img_profile_placeholder.png" class="avatar avatar-60 photo" height="60" width="60"/>
                 </div>
                 <p class="user">
                     {{message.username}} said:
